Changes for Perl Application Development and Refactoring Environment

0.49 to be released
    - Fixed #691: Extect subroutine does not work for a script without
      subroutines (WAXHEAD)
    - Bugfix: The split-beginner-error check got false positives (SEWI)
    - Moved more menu actions to independent actions (SEWI)
    - Added a readonly flag to the taskbar (AGN)
    - Fixed #698: Syntax checker leaks files in tmpdir (SEWI)
    - Syntax checker now also shows a successful check (SEWI)
    - Added menu option to reload all open files (SEWI)
    - The current selection or document may be filtered through an external
      command now (SEWI)
    - Low-priority popup messages could be moved to the status bar by setting
      a preferences option (SEWI)
    - require IPC::Open2 and IPC::Open3 as they are both used in the code (SZABGAB)
    - Improved autocomplete (always) results (SEWI)
    - Run make and TDD-tests in one step (KTHAKORE)
    - Padre is now an XP-themed win32 application (AZAWAWI)
    - Auto-save session state is now possible (SEWI)
    - Auto completion usability fixes (AZAWAWI)
    - Padre syntax images are now 16x16 transparent PNG images instead of 14x7 
      (AZAWAWI)
    - Fixed ticket:372 "window list should be sorted alphabetically" (AZAWAWI)
    - Added "shorten common path in window list" to preferences (AZAWAWI)
    - Fixed ticket:709 "Show editor window listed by project, then project-
      relative path" (AZAWAWI)
    - Added a test to run Padre's beginner error checks on the Padre source (SEWI)
    - Config option for auto-cleanup of files during save for supported
      document types (SEWI)
    - Modules/Plugins could now add their panels to the global preferences (SEWI)

0.48 2009.10.12
    - "Last session" now restores the last state even if Padre crashed and not
      the last stated saved by a planned exit (SEWI)
    - Fixed Wx::Perl::ProcessStream installation failure on vista/win7 by