@@ -1,7 +1,7 @@
 Changes for Perl Application Development and Refactoring Environment
 
 0.49 to be released
-    - Fixed #691: Extect subroutine does not work for a script without
+    - Fixed #691: Extract subroutine does not work for a script without
       subroutines (WAXHEAD)
     - Bugfix: The split-beginner-error check got false positives (SEWI)
     - Moved more menu actions to independent actions (SEWI)
@@ -29,6 +29,8 @@ Changes for Perl Application Development and Refactoring Environment
     - Config option for auto-cleanup of files during save for supported
       document types (SEWI)
     - Modules/Plugins could now add their panels to the global preferences (SEWI)
+    - Workaround for Test::NoWarnings hiding issue which lead to missing
+      prerequisites or upgrades (#646 SZABGAB)
 
 0.48 2009.10.12
     - "Last session" now restores the last state even if Padre crashed and not
